--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="SQLDS-SSMS" value="https://msdata.pkgs.visualstudio.com/DefaultCollection/_packaging/SQLDS_SSMS/nuget/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="Local Packages" value="./bin/nuget" />
   </packageSources>
 </configuration>
