--- a/Packages.props
+++ b/Packages.props
@@ -2,12 +2,6 @@
 	<ItemGroup>
 		<PackageReference Update="System.Net.Http" Version="4.3.4" />
 		<PackageReference Update="System.Runtime.Loader" Version="4.3.0" />
-		<PackageReference Update="System.IO.Packaging" Version="7.0.0" />
-		<PackageReference Update="System.Composition" Version="7.0.0" />
-		<PackageReference Update="System.Security.Permissions" Version="7.0.0" />
-		<PackageReference Update="System.Data.SqlClient" Version="4.8.6" />
-		<PackageReference Update="System.Text.Encoding.CodePages" Version="7.0.0" />
-		<PackageReference Update="System.Text.Encodings.Web" Version="7.0.0" />
 		<PackageReference Update="System.Reactive.Core" Version="6.0.0" />
 
 		<!-- Deprecated: TODO Migrate to Azure.Core -->
@@ -15,8 +9,6 @@
 		<!-- Deprecated: TODO Migrate to Azure.Core -->
 		<PackageReference Update="Microsoft.Rest.ClientRuntime.Azure" Version="3.3.19" />
 
-		<PackageReference Update="Microsoft.Extensions.DependencyModel" Version="7.0.0" />
-		<PackageReference Update="Microsoft.Extensions.FileSystemGlobbing" Version="7.0.0" />
 		<PackageReference Update="Microsoft.Identity.Client" Version="4.56.0" />
 		<PackageReference Update="Microsoft.Identity.Client.Extensions.Msal" Version="4.56.0" />
 
@@ -70,7 +62,18 @@
 		<PackageReference Update="Microsoft.Data.SqlClient" Version="5.1.4" />
 		<PackageReference Update="Microsoft.SqlServer.SqlManagementObjects" Version="170.18.0" />
 		<PackageReference Update="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+  
+  <!-- The following packages always need to be updated to the current .NET SDK version. -->
+  <ItemGroup>
+    <PackageReference Update="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
+    <PackageReference Update="Microsoft.Extensions.FileSystemGlobbing" Version="8.0.0" />
+    <PackageReference Update="System.Composition" Version="8.0.0" />
 		<PackageReference Update="System.Configuration.ConfigurationManager" Version="8.0.0" />
+    <PackageReference Update="System.IO.Packaging" Version="8.0.0" />
+    <PackageReference Update="System.Security.Permissions" Version="8.0.0" />
+    <PackageReference Update="System.Text.Encoding.CodePages" Version="8.0.0" />
+    <PackageReference Update="System.Text.Encodings.Web" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
