--- a/Packages.props
+++ b/Packages.props
@@ -2,6 +2,7 @@
   <ItemGroup>
     <PackageReference Update="System.Net.Http" Version="4.3.4" />
     <PackageReference Update="System.Runtime.Loader" Version="4.3.0" />
+    <PackageReference Update="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Update="System.Reactive.Core" Version="6.0.0" />
 
     <!-- Deprecated: TODO Migrate to Azure.Core -->
